--- a/HW2_sourceCode/pacific.css
+++ b/HW2_sourceCode/pacific.css
@@ -2,13 +2,24 @@ header, hgroup, nav, footer, figure, figcaption, aside, section, article {
 	display: block;
 }
 body {
-	/* background-image: url(ptrbackground.jpg); */
-	color: #00569f;
+	background-image: url(ptrbackground.jpg);
+	background-color: #00569f;
 	font-family: Arial, Helvetica, sans-serif;
+	width: 74%;
+	height: 60%;
+	margin: auto;
 }
 
 nav ul {
 	font-size: 1.2em;
+	background-color: #3399CC;
+	list-style-type: none;
+	height: 700px;
+	width: 200px;
+	position: absolute;
+	top: 106px;
+	padding: 20px;
+	margin: auto;
 }
 nav a:visited {
 	color: #344873;
@@ -19,12 +30,15 @@ nav a:hover {
 h1 {
 	background-image: url(sunset.jpg);
 	background-repeat: no-repeat;
-	max-width: 100%;
-	margin-bottom: 0;
-	padding: 10px;
+	background-size: 100% 100%;
+	height: 80px;
+	font-size: 40px;
+	color: white;
+	
 }
 h2 {
 	color: #3399CC;
+	float: left;
 }
 h1,
 h2 {
@@ -40,10 +54,9 @@ footer {
 	font-family: Georgia, "Times New Roman", serif;
 }
 #content ul{
-	list-style-type: none;
+	list-style-image: url(marker.gif);
 }
-#content li{
-  background: url('marker.gif') no-repeat;
-  height: 34px;
-  padding-left: 20px;
+#wrapper{
+	background-color: white;
+	height: 819px;
 }
