--- a/pacific.css
+++ b/pacific.css
@@ -17,6 +17,7 @@ body {
   width: 80%;
   min-width: 600px;
   margin: auto;
+  margin-bottom: 0px;
 }
 
 nav ul {
@@ -25,7 +26,6 @@ nav ul {
   list-style-type: none;
   padding: 20px;
   margin: 0;
-  padding-bottom: 330px;
 }
 nav a:visited {
   color: #344873;
@@ -36,12 +36,13 @@ nav a:hover {
 
 h1 {
   background-image: url(sunset.jpg);
+  background-position: right;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 80px;
   font-size: 40px;
   color: white;
-  margin: 0;
+  background-color: #000033;
+  margin-bottom: 0;
+  padding: 10px;
 }
 h2 {
   color: #3399cc;
@@ -74,7 +75,6 @@ footer {
 #content {
   margin-left: 160px;
   padding-left: 30px;
-  padding-bottom: 40px;
   margin-top: -20px;
   background: white;
 }
